tests/typing/errors/mcil/undefined-system.expected
File "tests/typing/errors/mcil/undefined-system.mcil", line 2, character 0-32:
2 | (check-system sys :query (q ()))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error Undefined system: `sys`
